@@ -1,14 +1,27 @@
+/*
+ *  Copyright 2018-2023 the original author or authors.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *       https://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
+ */
+
 package top.leafage.common.servlet;
 
-import top.leafage.common.basic.AbstractTreeNodeService;
-import top.leafage.common.basic.TreeNode;
+import top.leafage.common.AbstractTreeNodeService;
+import top.leafage.common.TreeNode;
 
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * For servlet to construct tree
@@ -23,7 +36,7 @@ public abstract class ServletAbstractTreeNodeService<T> extends AbstractTreeNode
      *
      * @param children 子节点
      * @return 树节点数据集
-     * @since 0.1.9
+     * @since 0.2.0
      */
     protected List<TreeNode> convert(List<T> children) {
         return this.convert(children, null);
@@ -35,17 +48,11 @@ public abstract class ServletAbstractTreeNodeService<T> extends AbstractTreeNode
      * @param children 子节点
      * @param expand   扩展属性
      * @return 树节点数据集
-     * @since 0.1.9
+     * @since 0.2.0
      */
     protected List<TreeNode> convert(List<T> children, Set<String> expand) {
-        Stream<TreeNode> stream = children.stream().map(child -> this.construct(child, expand));
-        Map<String, List<TreeNode>> listMap = stream.filter(node -> Objects.nonNull(node.getSuperior()) &&
-                        !"0".equals(node.getSuperior()))
-                .collect(Collectors.groupingBy(TreeNode::getSuperior));
-
-        stream.forEach(node -> node.setChildren(listMap.get(node.getCode())));
-        return stream.filter(node -> Objects.isNull(node.getSuperior()) || "0".equals(node.getSuperior()))
-                .collect(Collectors.toList());
+        List<TreeNode> treeNodes = children.stream().map(child -> this.node(child, expand)).toList();
+        return this.nodes(treeNodes);
     }
 
 }
